# k-NN-optimization-using-k-D-tree_NASP

./: CMakeLists.txt  README.md  pokretanje.txt
benchmarks/: .gitignore  CMakeLists.txt  README.md  benchmark_basic_vs_kdtree.cpp  benchmark_main.cpp  setup_nanoflann.ps1  setup_nanoflann.sh  visualize_results.py
benchmarks/include/: benchmark_runner.h  benchmark_utils.h  knn_nanoflann.h
benchmarks/src/: benchmark_runner.cpp  benchmark_utils.cpp  knn_nanoflann.cpp
datasets/: README.md  simple_test.csv
docs/: bentley_1975_notes.md  quicknn_notes.md  revised_kdtree_notes.md  uddin_2022_notes.md
examples/: example_bentley_1975.cpp
include/kdtree/: kdnode.h  kdtree.h
include/knn/: knn_basic.h  knn_kdtree.h  knn_variants.h
include/optimizations/: quicknn.h  revised_kdtree.h
include/utils/: dataset_loader.h  distance_metrics.h  metrics.h  point.h
src/kdtree/: kdnode.cpp  kdtree.cpp  kdtree_original.cpp
src/knn/: knn_basic.cpp  knn_kdtree.cpp
src/utils/: dataset_loader.cpp  distance_metrics.cpp  metrics.cpp  point.cpp
tests/: README.md  kdtreeTest.cpp  predict_knn_basic.cpp  predict_knn_kdtree.cpp  test_knn_basic.cpp  test_knn_kdtree.cpp
visualization/: plot_benchmarks.py  visualize_kdtree.cpp  visualize_metrics.py
